--- a/src/main/resources/WEB-INF/web.xml
+++ b/src/main/resources/WEB-INF/web.xml
@@ -4,22 +4,6 @@
    <listener>
       <listener-class>org.jboss.weld.environment.servlet.Listener</listener-class>
    </listener>
-   <listener>
-      <listener-class>com.sun.faces.config.ConfigureListener</listener-class>
-   </listener>
-   <context-param>
-      <param-name>com.sun.faces.expressionFactory</param-name>
-      <param-value>com.sun.el.ExpressionFactoryImpl</param-value>
-   </context-param>
-   <servlet>
-      <servlet-name>Faces Servlet</servlet-name>
-      <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
-      <load-on-startup>1</load-on-startup>
-   </servlet>
-   <servlet-mapping>
-      <servlet-name>Faces Servlet</servlet-name>
-      <url-pattern>faces/*</url-pattern>
-   </servlet-mapping>
    <servlet>
       <servlet-name>jersey-serlvet</servlet-name>
       <servlet-class>
@@ -29,6 +13,10 @@
          <param-name>javax.ws.rs.Application</param-name>
          <param-value>com.lifeasageek.goodstuffexample.RestConfig</param-value>
       </init-param>
+	   <!--<init-param>-->
+		   <!--<param-name>com.sun.jersey.config.property.packages</param-name>-->
+		   <!--<param-value>com.lifeasageek.goodstuffexample</param-value>-->
+	   <!--</init-param>-->
       <load-on-startup>1</load-on-startup>
    </servlet>
    <servlet-mapping>
