Works without Application.getClasses()

--- a/src/main/resources/WEB-INF/web.xml
+++ b/src/main/resources/WEB-INF/web.xml
@@ -9,14 +9,10 @@
       <servlet-class>
          com.sun.jersey.spi.container.servlet.ServletContainer
       </servlet-class>
-      <init-param>
-         <param-name>javax.ws.rs.Application</param-name>
-         <param-value>com.lifeasageek.goodstuffexample.RestConfig</param-value>
-      </init-param>
-	   <!--<init-param>-->
-		   <!--<param-name>com.sun.jersey.config.property.packages</param-name>-->
-		   <!--<param-value>com.lifeasageek.goodstuffexample</param-value>-->
-	   <!--</init-param>-->
+	   <init-param>
+		   <param-name>com.sun.jersey.config.property.packages</param-name>
+		   <param-value>com.lifeasageek.goodstuffexample</param-value>
+	   </init-param>
       <load-on-startup>1</load-on-startup>
    </servlet>
    <servlet-mapping>
